--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <base href="/rocketlane/">
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/ec46b425b5.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
